draft-ietf-idnabis-tables-09

--- a/draft-ietf-idnabis-tables-09.html
+++ b/draft-ietf-idnabis-tables-09.html
@@ -153,10 +153,10 @@
 <table summary="layout" width="66%" border="0" cellpadding="0" cellspacing="0"><tr><td><table summary="layout" width="100%" border="0" cellpadding="2" cellspacing="1">
 <tr><td class="header">Network Working Group</td><td class="header">P. Faltstrom, Ed.</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Cisco</td></tr>
-<tr><td class="header">Intended status: Standards Track</td><td class="header">November 24, 2009</td></tr>
-<tr><td class="header">Expires: May 28, 2010</td><td class="header">&nbsp;</td></tr>
+<tr><td class="header">Intended status: Standards Track</td><td class="header">January 09, 2010</td></tr>
+<tr><td class="header">Expires: July 13, 2010</td><td class="header">&nbsp;</td></tr>
 </table></td></tr></table>
-<h1><br />The Unicode code points and IDNA<br />draft-ietf-idnabis-tables-08.txt</h1>
+<h1><br />The Unicode code points and IDNA<br />draft-ietf-idnabis-tables-09.txt</h1>
 
 <h3>Abstract</h3>
 
@@ -187,11 +187,11 @@ The list of current Internet-Drafts can be accessed at
 The list of Internet-Draft Shadow Directories can be accessed at
 <a href='http://www.ietf.org/shadow.html'>http://www.ietf.org/shadow.html</a>.</p>
 <p>
-This Internet-Draft will expire on May 28, 2010.</p>
+This Internet-Draft will expire on July 13, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
-Copyright (c) 2009 IETF Trust and the persons identified as the
+Copyright (c) 2010 IETF Trust and the persons identified as the
 document authors.  All rights reserved.</p>
 <p>
 This document is subject to BCP 78 and the IETF Trust's Legal
@@ -290,12 +290,6 @@ Introduction</h3>
       approach for selecting the code points from <a class='info' href='#Unicode52'>The
       Unicode Standard<span> (</span><span class='info'>The Unicode Consortium, &ldquo;The Unicode Standard, Version 5.1.0,&rdquo; 2008.</span><span>)</span></a> [Unicode52] that should be included in the list of code
       points that may be used in Internationalized Domain Names.
-</p>
-<p>
-        The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT",
-        "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this
-        document are to be interpreted as described in <a class='info' href='#RFC2119'>RFC 2119<span> (</span><span class='info'>Bradner, S., &ldquo;Key words for use in RFCs to Indicate Requirement Levels,&rdquo; March&nbsp;1997.</span><span>)</span></a> [RFC2119].
-			
 </p>
 <p>Specifically, <a class='info' href='#RFC4690'>RFC 4690<span> (</span><span class='info'>Klensin, J., Faltstrom, P., Karp, C., and IAB, &ldquo;Review and Recommendations for Internationalized Domain Names (IDNs),&rdquo; September&nbsp;2006.</span><span>)</span></a> [RFC4690] says the
       following:
@@ -397,6 +391,12 @@ Introduction</h3>
       proposal for updating the IDNA standards to resolve issues
       uncovered in recent years, cover a broader range of scripts, and provide
       for migration to newer versions of Unicode. See <a class='info' href='#IDNA2008-rationale'>[IDNA2008&#8209;rationale]<span> (</span><span class='info'>Klensin, J., Ed., &ldquo;Internationalized Domain Names for Applications (IDNA): Background, 					 Explanation, and Rationale,&rdquo; June&nbsp;2009.</span><span>)</span></a> for a broader discussion.
+</p>
+<p>
+        The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT",
+        "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this
+        document are to be interpreted as described in <a class='info' href='#RFC2119'>RFC 2119<span> (</span><span class='info'>Bradner, S., &ldquo;Key words for use in RFCs to Indicate Requirement Levels,&rdquo; March&nbsp;1997.</span><span>)</span></a> [RFC2119].
+			
 </p>
 <a name="Categories"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -747,22 +747,23 @@ IANA Considerations</h3>
 IDNA derived property value registry</h3>
 
 <p>
-	      IANA is to create a registry with the derived properties for the versions of
-        Unicode that is released after (and including) version 5.2. The
-        derived property value is to be calculated according to the
-        specifications in <a class='info' href='#Categories'>Section&nbsp;2<span> (</span><span class='info'>Category definitions Used to Calculate Derived Property Value</span><span>)</span></a> and <a class='info' href='#PropertyCalculation'>Section&nbsp;3<span> (</span><span class='info'>Calculation of the Derived Property</span><span>)</span></a> and not by copying the non-normative
+	      IANA is to create a registry with the derived properties for the
+        versions of Unicode that is released after (and including) version
+        5.2. The derived property value is to be calculated in cooperation
+        with a <a class='info' href='#RFC5226'>designated expert<span> (</span><span class='info'>Narten, T. and H. Alvestrand, &ldquo;Guidelines for Writing an IANA Considerations Section in RFCs,&rdquo; May&nbsp;2008.</span><span>)</span></a> [RFC5226] according to
+        the specifications in <a class='info' href='#Categories'>Section&nbsp;2<span> (</span><span class='info'>Category definitions Used to Calculate Derived Property Value</span><span>)</span></a> and <a class='info' href='#PropertyCalculation'>Section&nbsp;3<span> (</span><span class='info'>Calculation of the Derived Property</span><span>)</span></a> and not by copying the non-normative
         table found in <a class='info' href='#Codepoints'>Appendix&nbsp;B<span> (</span><span class='info'>Codepoints 0x0000 - 0x10FFFF</span><span>)</span></a>.
   		
 </p>
 <p>
-        If IANA during this process finds non-backward compatible changes to
-        the table of derived properties, or otherwise problems during the creation
-        of the table, that is to be flagged to the IESG. Changes to the rules
-				(as specified in <a class='info' href='#Categories'>Section&nbsp;2<span> (</span><span class='info'>Category definitions Used to Calculate Derived Property Value</span><span>)</span></a> and
-	      <a class='info' href='#PropertyCalculation'>Section&nbsp;3<span> (</span><span class='info'>Calculation of the Derived Property</span><span>)</span></a>), including
-        <a class='info' href='#G'>BackwardCompatible<span> (</span><span class='info'>BackwardCompatible (G)</span><span>)</span></a> (a set that is at
-        release of this document is empty), require
-        IETF Review, as described in <a class='info' href='#RFC5226'>RFC 5226<span> (</span><span class='info'>Narten, T. and H. Alvestrand, &ldquo;Guidelines for Writing an IANA Considerations Section in RFCs,&rdquo; May&nbsp;2008.</span><span>)</span></a> [RFC5226].
+        If during this process (creation of the table of derived property
+        values) followed by a designated expert review, either non-backward
+        compatible changes to the table of derived properties are discovered,
+        or otherwise problems during the creation of the table arises, that is
+        to be flagged to the IESG. Changes to the rules (as specified in <a class='info' href='#Categories'>Section&nbsp;2<span> (</span><span class='info'>Category definitions Used to Calculate Derived Property Value</span><span>)</span></a> and <a class='info' href='#PropertyCalculation'>Section&nbsp;3<span> (</span><span class='info'>Calculation of the Derived Property</span><span>)</span></a>),
+        including <a class='info' href='#G'>BackwardCompatible<span> (</span><span class='info'>BackwardCompatible (G)</span><span>)</span></a> (a set that is at
+        release of this document is empty), require IETF Review, as described
+        in <a class='info' href='#RFC5226'>RFC 5226<span> (</span><span class='info'>Narten, T. and H. Alvestrand, &ldquo;Guidelines for Writing an IANA Considerations Section in RFCs,&rdquo; May&nbsp;2008.</span><span>)</span></a> [RFC5226].
 		  
 </p>
 <a name="IANAContext"></a><br /><hr />
