--- a/draft-ietf-pkix-rfc5272-bis-08.html
+++ b/draft-ietf-pkix-rfc5272-bis-08.html
@@ -410,14 +410,14 @@
 </tr>
 <tr>
 <td class="left">Updates: 5272, 5273, 5274 (if approved)</td>
-<td class="right">September 07, 2011</td>
+<td class="right">September 13, 2011</td>
 </tr>
 <tr>
 <td class="left">Intended status: Standards Track</td>
 <td class="right"></td>
 </tr>
 <tr>
-<td class="left">Expires: March 10, 2012</td>
+<td class="left">Expires: March 16, 2012</td>
 <td class="right"></td>
 </tr>
 
@@ -426,7 +426,7 @@
   </table>
 
   <p class="title">Certificate Management over CMS (CMC) Updates<br />
-  <span class="filename">draft-ietf-pkix-rfc5272-bis-07</span></p>
+  <span class="filename">draft-ietf-pkix-rfc5272-bis-08</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This document contains a set of updates to the base syntax for CMC, a Certificate Management protocol using the Cryptographic Message Syntax (CMS).  This document updates RFC 5272, RFC 5273 and RFC 5274.  </p>
@@ -435,7 +435,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on March 10, 2012.</p>
+<p>This Internet-Draft will expire on March 16, 2012.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -531,6 +531,7 @@
 </li>
 <li>Creation of a new attribute, Change Subject Name, that allows a client to request a change in the subject name and subject alternate name fields in a certificate.  </li>
 <li>Add Extended Key Usages for CMC - Defined a new Subject Information Access to hold locations to contact the CMC server.  </li>
+<li>Clarify that the use of a pre-existing certificate is not limited to just renewal and rekey messages and is required for support.  This formalizes a requirement for the ability to do renewal and rekey which previsously was implicity.</li>
 </ul>
 
 <p> </p>
@@ -724,14 +725,16 @@
 <p id="rfc.section.2.11.p.4">id-ad-cmc OBJECT IDENTIFIER ::= { id-ad 12 } </p>
 <h1 id="rfc.section.2.12">
 <a href="#rfc.section.2.12">2.12.</a> Updates Section 8. Security Considerations</h1>
-<p id="rfc.section.2.12.p.1">The following paragraph is to be added to the end of section 8.</p>
+<p id="rfc.section.2.12.p.1">The following paragraphs are to be added to the end of section 8.</p>
 <p id="rfc.section.2.12.p.2">A number of controls such as the RA Identity Proof Witness control exist for an RA to either make assertions about or modify a certificate request.  Any upstream request processor, such as a CA, MUST verify that the RA is fully identified and authorized to make assertion or modification it is claiming.  If it is not identified or authorized then any request MUST be rejected.</p>
+<p id="rfc.section.2.12.p.3">CMC servers, both RAs and CAs, need to due diligence in checking the contents of a certificate request.  At an absolute minimum all fields should be checked to ensure that the policies of the CA/RA are correctly enforced.  While all fields need to be checked, special care should be taken with names, name forms, algorithm choices and algorithm parameters.</p>
 <h1 id="rfc.section.3">
 <a href="#rfc.section.3">3.</a> Updates to RFC 5273 - Certificate Management over CMS (CMC): Transport Protocols</h1>
 <h1 id="rfc.section.3.1">
 <a href="#rfc.section.3.1">3.1.</a> Update to Section 5 TCP-Based Protocol</h1>
 <p id="rfc.section.3.1.p.1">The following replaces paragraph 3 in section 5.</p>
 <p id="rfc.section.3.1.p.2">CMC requires a registered port number to send and receive CMC messages over TCP.  The title of this IP Protocol number is "pkix-cmc".  The value of this TCP port is TBD1.</p>
+<p id="rfc.section.3.1.p.3">Prior to this update, CMC did not have a registred port number and used an externally configured port from the Private Port range.  Client implementations MAY want to continue to allow for this to occur.  Servers SHOULD change to use the new port.  It is expected that HTTP will continue to be the primary transport method used by CMC installations.</p>
 <h1 id="rfc.section.3.2">
 <a href="#rfc.section.3.2">3.2.</a> New Section 6. IANA Considerations</h1>
 <p id="rfc.section.3.2.p.1">This is a new section to be inserted before the current section 6.</p>
@@ -847,7 +850,7 @@ Contact: chair@ietf.org
 <p id="rfc.section.Appendix A.1.p.1">This section contains the updated ASN.1 module for <a href="#RFC5272">[RFC5272]</a>.  This module replaces the module in Appendix A.  Although a 2008 ASN.1 Module is provided, this remains the normative module as per the policy of the PKIX working group.</p>
 <div id="#rfc.figure.6"></div>
 <pre>
-EnrollmentMessageSyntax-2011-v08
+EnrollmentMessageSyntax-2011-v88
  { iso(1) identified-organization(3) dod(4) internet(1)
    security(5) mechansims(5) pkix(7) id-mod(0)
    id-mod-enrollMsgSyntax-2011-88(76) }
@@ -920,7 +923,8 @@ BEGIN
  id-cmc-senderNonce OBJECT IDENTIFIER ::= {id-cmc 6}
  id-cmc-recipientNonce OBJECT IDENTIFIER ::= {id-cmc 7}
 
- -- This is the content type used for a request message in the protocol
+ -- This is the content type used for a request message
+ --     in the protocol
 
  id-cct-PKIData OBJECT IDENTIFIER ::= { id-cct 2 }
 
@@ -1107,8 +1111,8 @@ BEGIN
  -- The following is used to request V3 extensions be added to a
  -- certificate
 
- id-ExtensionReq OBJECT IDENTIFIER ::= {iso(1) member-body(2) us(840)
-      rsadsi(113549) pkcs(1) pkcs-9(9) 14}
+ id-ExtensionReq OBJECT IDENTIFIER ::= {iso(1) member-body(2)
+      us(840) rsadsi(113549) pkcs(1) pkcs-9(9) 14}
 
  ExtensionReq ::= SEQUENCE SIZE (1..MAX) OF Extension
 
@@ -1120,9 +1124,9 @@ BEGIN
  NoSignatureValue ::= OCTET STRING
 
  --  Unauthenticated attribute to carry removable data.
- --    This could be used in an update of "CMC Extensions: Server Side
- --    Key Generation and Key Escrow" (February 2005) and in other
- --    documents.
+ --    This could be used in an update of "CMC Extensions: Server 
+ --    Side Key Generation and Key Escrow" (February 2005) and in 
+ --    other documents.
 
  id-aa OBJECT IDENTIFIER ::= { iso(1) member-body(2) us(840)
        rsadsi(113549) pkcs(1) pkcs-9(9) smime(16) id-aa(2)}
@@ -1206,7 +1210,7 @@ BEGIN
  id-cmc-controlProcessed OBJECT IDENTIFIER ::= {id-cmc 32}
 
  ControlsProcessed ::= SEQUENCE {
-     bodyList              SEQUENCE SIZE(1..MAX) OF BodyPartReference
+     bodyList        SEQUENCE SIZE(1..MAX) OF BodyPartReference
  }
 
  --  Identity Proof control w/ algorithm agility
