draft-tsou-diameter-explicit-routing-04

--- a/draft-tsou-diameter-explicit-routing-04.html
+++ b/draft-tsou-diameter-explicit-routing-04.html
@@ -154,28 +154,22 @@
 <tr><td class="header">Network Working Group</td><td class="header">T. Tsou</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Huawei Technologies</td></tr>
 <tr><td class="header">Intended status: Informational</td><td class="header">G. Zorn</td></tr>
-<tr><td class="header">Expires: February 7, 2010</td><td class="header">Network Zen</td></tr>
+<tr><td class="header">Expires: August 29, 2010</td><td class="header">Network Zen</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">T. Taylor, Ed.</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Huawei Technologies</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">August 06, 2009</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">February 25, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />Session-Specific Explicit Diameter Request Routing<br />draft-tsou-diameter-explicit-routing-03</h1>
+<h1><br />Session-Specific Explicit Diameter Request Routing<br />draft-tsou-diameter-explicit-routing-04</h1>
 
+<h3>Abstract</h3>
+
+<p>   
+      This document describes a mechanism to enable specific Diameter proxies to remain in the path of all message exchanges constituting a Diameter session. This document is being published to provide the basis for a standardized solution to a problem raised by some architectures (e.g., WLAN 3GPP IP access, 3GPP TS23.234) that use Diameter. The intended use will be as a reference within the non-IETF specification of a Diameter application that meets the needs of these architectures.     
+</p>
 <h3>Status of this Memo</h3>
 <p>
 This Internet-Draft is submitted to IETF in full
-conformance with the provisions of BCP&nbsp;78 and BCP&nbsp;79.
-This document may contain material from IETF Documents or IETF
-Contributions published or made publicly available before November
-10, 2008. The person(s) controlling the copyright in some of this
-material may not have granted the IETF Trust the right to allow
-modifications of such material outside the IETF Standards Process.
-Without obtaining an adequate license from the person(s) controlling
-the copyright in such materials, this document may not be modified
-outside the IETF Standards Process, and derivative works of it may
-not be created outside the IETF Standards Process, except to format
-it for publication as an RFC or to translate it into languages other
-than English.</p>
+conformance with the provisions of BCP&nbsp;78 and BCP&nbsp;79.</p>
 <p>
 Internet-Drafts are working documents of the Internet Engineering
 Task Force (IETF), its areas, and its working groups.
@@ -193,25 +187,35 @@ The list of current Internet-Drafts can be accessed at
 The list of Internet-Draft Shadow Directories can be accessed at
 <a href='http://www.ietf.org/shadow.html'>http://www.ietf.org/shadow.html</a>.</p>
 <p>
-This Internet-Draft will expire on February 7, 2010.</p>
+This Internet-Draft will expire on August 29, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
-Copyright (c) 2009 IETF Trust and the persons identified as the
+Copyright (c) 2010 IETF Trust and the persons identified as the
 document authors.  All rights reserved.</p>
 <p>
 This document is subject to BCP 78 and the IETF Trust's Legal
-Provisions Relating to IETF Documents in effect on the date of
-publication of this document (http://trustee.ietf.org/license-info).
-Please review these documents carefully, as they describe your
-rights and restrictions with respect to this document.</p>
-
-<h3>Abstract</h3>
-
-<p>   
-      This document describes a mechanism to enable specific Diameter proxies to remain in the path of all message exchanges constituting a Diameter session.
-     
-</p><a name="toc"></a><br /><hr />
+Provisions Relating to IETF Documents
+(http://trustee.ietf.org/license-info) in effect on the date of
+publication of this document.  Please review these documents
+carefully, as they describe your rights and restrictions with respect
+to this document. Code Components extracted from this document must
+include Simplified BSD License text as described in Section 4.e of
+the Trust Legal Provisions and are provided without warranty as
+described in the BSD License.</p>
+<p>
+This document may contain material from IETF Documents or IETF
+Contributions published or made publicly available before November
+10, 2008.  The person(s) controlling the copyright in some of this
+material may not have granted the IETF Trust the right to allow
+modifications of such material outside the IETF Standards Process.
+Without obtaining an adequate license from the person(s) controlling
+the copyright in such materials, this document may not be modified
+outside the IETF Standards Process, and derivative works of it may
+not be created outside the IETF Standards Process, except to format
+it for publication as an RFC or to translate it into languages other
+than English.</p>
+<a name="toc"></a><br /><hr />
 <h3>Table of Contents</h3>
 <p class="toc">
 <a href="#intro">1.</a>&nbsp;
@@ -274,8 +278,9 @@ Introduction</h3>
       In the Diameter base protocol <a class='info' href='#RFC3588'>[RFC3588]<span> (</span><span class='info'>Calhoun, P., Loughney, J., Guttman, E., Zorn, G., and J. Arkko, &ldquo;Diameter Base Protocol,&rdquo; September&nbsp;2003.</span><span>)</span></a>, the routing of request messages is based solely on the routing decisions made separately by each node along the path.
       Therefore, in a topology where multiple paths exist from source to destination, there is no guarantee that all messages relating to a given session will take the same path.
       In general, this has not caused problems, but some architectures (e.g., WLAN 3GPP IP access <a class='info' href='#TS23.234'>[TS23.234]<span> (</span><span class='info'>3GPP, &ldquo;3GPP system to Wireless Local Area Network (WLAN) interworking; System description,&rdquo; 2006.</span><span>)</span></a>) require that once certain agents become engaged in a session, they are able to process all subsequent messages for that session.
-      This document briefly reviews the target architecture and describes a simple solution to the problem.
 		
+</p>
+<p>While the solution presented in this document is valid, it violates one of the basic premises of Diameter, the robustness of its architecture. With normal Diameter routing, sessions will survive failures of agents along the routing path. With the proposals in this document, routing becomes pinned to specific agents whose failure will terminate the session. The IETF does not endorse this specification because of its impact on Diameter session survivability, but do not object to its publication for use in specialized situations where the loss of robustness is acceptable. 
 </p>
 <a name="term"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -955,6 +960,6 @@ References</h3>
 <tr><td class="author-text">&nbsp;</td>
 <td class="author-text">Canada</td></tr>
 <tr><td class="author" align="right">Email:&nbsp;</td>
-<td class="author-text"><a href="mailto:tom.taylor@rogers.com">tom.taylor@rogers.com</a></td></tr>
+<td class="author-text"><a href="mailto:tom111.taylor@bell.net">tom111.taylor@bell.net</a></td></tr>
 </table>
 </body></html>
