draft-ietf-nsis-applicability-mobility-signaling-19

--- a/draft-ietf-nsis-applicability-mobility-signaling-19.html
+++ b/draft-ietf-nsis-applicability-mobility-signaling-19.html
@@ -155,24 +155,24 @@
 <tr><td class="header">Next Steps in Signaling (nsis)</td><td class="header">T. Sanda (Ed.)</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Panasonic</td></tr>
 <tr><td class="header">Intended status: Informational</td><td class="header">X. Fu</td></tr>
-<tr><td class="header">Expires: December 17, 2010</td><td class="header">University of Goettingen</td></tr>
+<tr><td class="header">Expires: January 7, 2011</td><td class="header">University of Goettingen</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">S. Jeong</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">HUFS</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">J. Manner</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">TKK</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">H. Tschofenig</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Nokia Siemens Networks</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">June 15, 2010</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">July 6, 2010</td></tr>
 </table></td></tr></table>
 <h1><br />NSIS
-    Protocols operation in Mobile Environments<br />draft-ietf-nsis-applicability-mobility-signaling-18.txt</h1>
+    Protocols operation in Mobile Environments<br />draft-ietf-nsis-applicability-mobility-signaling-19.txt</h1>
 
 <h3>Abstract</h3>
 
 <p>Mobility of an IP-based node affects routing paths, and as a result,
       can have a significant effect on the protocol operation and state
       management. This document discusses the effects mobility can cause to the
-      NSIS protocol suite, and how the protocols operate in different
+      NSIS protocol suite, and shows how the NSIS protocols operation can work in different
       scenarios, with mobility management protocols.
 </p>
 <h3>Status of this Memo</h3>
@@ -190,7 +190,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on December 17, 2010.</p>
+This Internet-Draft will expire on January 7, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -307,9 +307,13 @@ Changes from -14 version<br />
 Changes from -15 version<br />
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor27">9.17.</a>&nbsp;
 Changes from -16 version<br />
-<a href="#anchor28">10.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor28">9.18.</a>&nbsp;
+Changes from -17 version<br />
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor29">9.19.</a>&nbsp;
+Changes from -18 version<br />
+<a href="#anchor30">10.</a>&nbsp;
 Contributors<br />
-<a href="#anchor29">11.</a>&nbsp;
+<a href="#anchor31">11.</a>&nbsp;
 Acknowledgements<br />
 <a href="#rfc.references1">12.</a>&nbsp;
 References<br />
@@ -342,31 +346,24 @@ Introduction</h3>
       its own NSLP protocol; currently there two standardized NSLP protocols,
       the QoS NSLP <a class='info' href='#draft-ietf-nsis-qos-nslp'>[draft&#8209;ietf&#8209;nsis&#8209;qos&#8209;nslp]<span> (</span><span class='info'>Manner, J., &ldquo;NSLP for Quality-of-Service Signaling,&rdquo; January&nbsp;2010.</span><span>)</span></a>, and the NAT/Firewall
       NSLP <a class='info' href='#draft-ietf-nsis-nslp-natfw'>[draft&#8209;ietf&#8209;nsis&#8209;nslp&#8209;natfw]<span> (</span><span class='info'>Stiemerling, M., &ldquo;NAT/Firewall NSIS Signaling Layer Protocol (NSLP),&rdquo; April&nbsp;2010.</span><span>)</span></a>
+      
 </p>
-<p>The goals of this draft are to present the effects of mobility on the
+<p>The goals of this document are to present the effects of mobility on the
       NTLP/NSLPs and to provide guides on how such NSIS protocols work in
       basic mobility scenarios, including support for Mobile IPv4 and Mobile
       IPv6 scenarios. We also show how these protocols fulfil the requirements
       regarding mobility set forth in <a class='info' href='#RFC3726'>[RFC3726]<span> (</span><span class='info'>Brunner, (Ed), M., &ldquo;Requirements for Signaling Protocols,&rdquo; June&nbsp;2004.</span><span>)</span></a>.
-      In general, the NSIS protocols work well in mobile environments. The
-      efficiency of NSIS signaling is primarily an issue of software
-      engineering, e.g., which way an implementer chooses when implementing
-      the protocol functions, and how the coupling of the mobility management
-      protocols and the NSIS stack is implemented.
-</p>
-<p>The Session ID (SID) used in NSIS signaling enables the separation of
+      In general, the NSIS protocols work well in mobile environments. 
+      The Session ID (SID) used in NSIS signaling enables the separation of
       the signaling state and the IP addresses of the communicating hosts.
       This makes it possible to directly update a signaling state in the
       network due to mobility without being forced to first remove the old
       state and then re-establish a new one. This is the fundamental reason
-      why NSIS signaling works well in mobile environments.
+      why NSIS signaling works well in mobile environments. As the additional 
+      information, mobility specific enhanced operations, e.g. 
+      operations with crossover node (CRN) are also introduced.
 </p>
-<p>A further important issue is that NSLPs must be aware of mobility,
-      i.e., routing and IP address changes. GIST has no semantics of an
-      end-to-end signaling session, only NSLPs have. Moreover, the Session ID
-      is effectively an NSLP layer concept.
-</p>
-<p>This draft focuses on basic mobility scenarios. Key management
+<p>This document focuses on basic mobility scenarios. Key management
       related to handovers, multihoming and interactions between NSIS and
       other mobility management protocols than Mobile IP are out of scope of
       this document. Also, practical implementations typically need various
@@ -380,8 +377,8 @@ Introduction</h3>
 <a name="rfc.section.2"></a><h3>2.&nbsp;
 Requirements Notation and Terminology</h3>
 
-<p>The terminology in this draft is based on <a class='info' href='#draft-ietf-nsis-ntlp'>[draft&#8209;ietf&#8209;nsis&#8209;ntlp]<span> (</span><span class='info'>Schulzrinne, H., &ldquo;GIST: General Internet Signaling Transport,&rdquo; June&nbsp;2009.</span><span>)</span></a> and <a class='info' href='#RFC3753'>[RFC3753]<span> (</span><span class='info'>Manner, J., &ldquo;Mobility Related Terminology,&rdquo; June&nbsp;2004.</span><span>)</span></a>.
-      In addition, the following terms are used. Note that in this draft, a
+<p>The terminology in this documnet is based on <a class='info' href='#draft-ietf-nsis-ntlp'>[draft&#8209;ietf&#8209;nsis&#8209;ntlp]<span> (</span><span class='info'>Schulzrinne, H., &ldquo;GIST: General Internet Signaling Transport,&rdquo; June&nbsp;2009.</span><span>)</span></a> and <a class='info' href='#RFC3753'>[RFC3753]<span> (</span><span class='info'>Manner, J., &ldquo;Mobility Related Terminology,&rdquo; June&nbsp;2004.</span><span>)</span></a>.
+      In addition, the following terms are used. Note that in this document, a
       generic route change caused by regular IP routing is referred to as a
       'route change', and the route change caused by mobility is referred to
       as 'mobility'.
@@ -600,9 +597,10 @@ General functionality</h3>
         signaling.
 </p>
 <p>When a path changes, the session information on the old path needs
-        to be removed. After a routing change, the NSLP running on the
-        end-host or the CRN, depending on the direction of the session, can
-        use the SII Handle (provided by GIST) to remove states on the old
+        to be removed. Normally, the information is released when the session 
+        timer is expired after a routing change. But the NSLP running on the
+        end-host or the CRN, depending on the direction of the session, may
+        use the SII Handle (provided by GIST) to explicitly remove states on the old
         path; new session information is simultaneously set up on the new
         path. Both current NSLPs use sequence numbers to identify the order of
         messages, and this information can be used by the protocols to recover
@@ -660,7 +658,7 @@ QoS NSLP</h3>
         path-coupled signaling.
 </p>
 <p>In this process, the obsoleted state in the old path is not
-        explicitly released. To speed up the process, it may be possible to
+        explicitly released because the state can be released by timer expiration. To speed up the process, it may be possible to
         localize the signaling. When the RESERVE message
         reaches a node, depicted as CRN in this document (setp(2) in <a class='info' href='#fig.Basic.OP.example'>Figure&nbsp;1<span> (</span><span class='info'>Basic operation example</span><span>)</span></a>), where a state is
         determined for the first time to reflect the same session, the node
@@ -762,7 +760,7 @@ NATFW NSLP</h3>
         path-coupled signaling.
 </p>
 <p>In this process, the obsoleted state in the old path is not
-        explicitly released. When the CREATE message reaches a node, depicted
+        explicitly released because the state can be released by timer expiration. When the CREATE message reaches a node, depicted
         as CRN in this document (step(2) in <a class='info' href='#fig.Basic.OP.exampleNATFW'>Figure&nbsp;2<span> (</span><span class='info'>NATFW NSLP operation example</span><span>)</span></a>), where a state is determined for the first
         time to reflect the same session, the node may issue a NOTIFY message
         towards the MN's old CoA (step(9) in <a class='info' href='#fig.Basic.OP.exampleNATFW'>Figure&nbsp;2<span> (</span><span class='info'>NATFW NSLP operation example</span><span>)</span></a>).
@@ -811,6 +809,8 @@ NATFW NSLP</h3>
 <a name="rfc.section.4.4"></a><h3>4.4.&nbsp;
 Localized signaling in mobile scenarios</h3>
 
+<p>This section describes detailed CRN operations. As described in previous sections, CRN operations are informational.
+</p>
 <p>As shown in <a class='info' href='#fig.Top.NSIS.sig.caused.mob'>Figure&nbsp;3<span> (</span><span class='info'>The topology for NSIS signaling caused by mobility</span><span>)</span></a>,
 	 mobility generally causes signaling path to either converge or diverge
         depending on the direction of each signaling flow.
@@ -1161,10 +1161,11 @@ Sender-Initiated Reservation with Mobile IP tunnel</h3>
               NSLP in the MN initiates RESERVE (end-to-end) message to start
               the State Update procedure. The GIST below the QoS-NSLP adds
               GIST header and then sends the encapsulated RESERVE message to
-              peer GIST node with corresponding QoS-NSLP for DCRN discovery.
+              peer GIST node with corresponding QoS-NSLP.
               In this case, the peer GIST node is a FA if the FA is an
               NSIS-aware node. The FA is one of the endpoints of Mobile IP
-              tunneling: Tentry. In case of interaction with tunnel signaling
+              tunneling: Tentry. For proper NSIS tunneling operation, a Mobile IP endpoint is required to be 
+              NSIS tunneling aware. In case of interaction with tunnel signaling
               originated from the FA, there can be two scenarios depending on
               whether the tunnel already has pre-configured QoS sessions or not.
               In former case the FA map end-to-end QoS signaling requests directly to existing
@@ -1351,9 +1352,10 @@ Receiver-Initiated Reservation with Mobile IP tunnel</h3>
 <a name="rfc.section.5.3.3"></a><h3>5.3.3.&nbsp;
 CRN discovery and State Update with Mobile IP tunneling</h3>
 
-<p>Interaction with Mobile IP tunneling scenario can define two
+<p>In case the tunnel is dynamically created mode, interaction with Mobile IP tunneling scenario can define two
           types of CRNs, i.e., a CRN on end-to-end path and a CRN on tunneling
-          path. CRN discovery and State Update for these two paths are
+          path while pre-configured mode only have the one on end-to-end. 
+          CRN discovery and State Update for these two paths are
           operated independently.
 </p>
 <p>CRN discovery for end-to-end path is initiated by the MN by
@@ -1369,6 +1371,9 @@ CRN discovery and State Update with Mobile IP tunneling</h3>
           (receiver-initiated case) message. The route change procedures
           described in <a class='info' href='#Basic.OP'>Section&nbsp;4<span> (</span><span class='info'>Basic Operations for Mobility Support</span><span>)</span></a> are applicable to this
           case.
+</p>
+<p>End-to-end state inside the tunnel should not be torn until all states inside the tunnel have been torn from imprementation perspective. 
+          But detailed discussions are out-of-scope of this document.
 </p>
 <a name="Further.Studies"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -1578,7 +1583,7 @@ Security Considerations</h3>
       [gist, qos-nslp, natfw-nslp] remain relevant. When deployed in service
       provider networks, it is mandatory to ensure that only authorized
       entities are permitted to initiate re-establishment and removal of NSIS
-      states in mobile environments, including the use of NSIS proxies.
+      states in mobile environments, including the use of NSIS proxies and CRN.
 </p>
 <a name="IANA.Considerations"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -2029,6 +2034,38 @@ Changes from -16 version</h3>
 
 <a name="anchor28"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
+<a name="rfc.section.9.18"></a><h3>9.18.&nbsp;
+Changes from -17 version</h3>
+
+<p>Changes in Version -18 is: </p>
+<ol class="text">
+<li>Some editorial changes were made.
+</li>
+</ol>
+
+<a name="anchor29"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
+<a name="rfc.section.9.19"></a><h3>9.19.&nbsp;
+Changes from -18 version</h3>
+
+<p>Changes in Version -19 are: </p>
+<ol class="text">
+<li>Abstract and Introduction were changed to clearly say the NSIS protocols operations
+            can work in mobility environments without particular operations, and additional operations
+            such as CRN discovery are only for enhancement and informational.
+</li>
+<li>Some texts were added to section 4 to say the state in old path can be torn by timer.
+</li>
+<li>Consideration in tearing down end-to-end tunneling state was mentioned in section 5.
+</li>
+<li>Authorization for CRN was briefly mentioned in security consideration.
+</li>
+<li>Some editorial changes were made.
+</li>
+</ol>
+
+<a name="anchor30"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.10"></a><h3>10.&nbsp;
 Contributors</h3>
 
@@ -2042,7 +2079,7 @@ Contributors</h3>
       Separating authors into two groups was done without treating any one of 
       them better (or worse) than others.
 </p>
-<a name="anchor29"></a><br /><hr />
+<a name="anchor31"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.11"></a><h3>11.&nbsp;
 Acknowledgements</h3>
