draft-ietf-syslog-dtls-05

--- a/draft-ietf-syslog-dtls-05.html
+++ b/draft-ietf-syslog-dtls-05.html
@@ -8,7 +8,7 @@
         body {
                 font-family: verdana, charcoal, helvetica, arial, sans-serif;
                 font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		color: #000; background-color: #FFF;
                 margin: 2em;
         }
@@ -84,11 +84,11 @@
         p { margin-left: 2em; margin-right: 2em; }
         p.copyright { font-size: x-small; }
         p.toc { font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		font-weight: bold; margin-left: 3em; }
         table.toc { margin: 0 0 0 3em; padding: 0; border: 0; vertical-align: text-top; }
         td.toc { font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		font-weight: bold; vertical-align: text-top; }
 
         ol.text { margin-left: 2em; margin-right: 2em; }
@@ -121,7 +121,7 @@
         /* RFC-2629 <texttable>s. */
         table.all, table.full, table.headers, table.none {
                 font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		text-align: center; border-width: 2px;
                 vertical-align: top; border-collapse: collapse;
         }
@@ -153,14 +153,14 @@
 <tr><td class="header">Network Working Group</td><td class="header">J. Salowey</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Cisco Systems, Inc.</td></tr>
 <tr><td class="header">Intended status: Standards Track</td><td class="header">T. Petch</td></tr>
-<tr><td class="header">Expires: November 1, 2010</td><td class="header">Engineering Networks Ltd</td></tr>
+<tr><td class="header">Expires: November 5, 2010</td><td class="header">Engineering Networks Ltd</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">R. Gerhards</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Adiscon GmbH</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">H. Feng</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Huaweisymantec Technologies</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">April 30, 2010</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">May 4, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />Datagram Transport Layer Security (DTLS) Transport Mapping for Syslog<br />draft-ietf-syslog-dtls-04.txt</h1>
+<h1><br />Datagram Transport Layer Security (DTLS) Transport Mapping for Syslog<br />draft-ietf-syslog-dtls-05.txt</h1>
 
 <h3>Abstract</h3>
 
@@ -184,7 +184,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on November 1, 2010.</p>
+This Internet-Draft will expire on November 5, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -232,7 +232,7 @@ Protocol Elements<br />
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor6">5.1.</a>&nbsp;
 Transport<br />
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor7">5.2.</a>&nbsp;
-Port Assignment<br />
+Port and Service Code Assignment<br />
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor8">5.3.</a>&nbsp;
 Initiation<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor9">5.3.1.</a>&nbsp;
@@ -402,12 +402,12 @@ Transport</h3>
 <a name="anchor7"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.5.2"></a><h3>5.2.&nbsp;
-Port Assignment</h3>
+Port and Service Code Assignment</h3>
 
 <p>A syslog transport sender is always a DTLS client and a transport receiver is always a DTLS server.
 </p>
 <p>
-    The UDP and DCCP port [TBD] has been allocated as the default port for syslog over DTLS as defined in this document.
+    The UDP and DCCP port [TBD] has been allocated as the default port for syslog over DTLS as defined in this document.  The service code [TBD] has been assigned to syslog.
 </p>
 <a name="anchor8"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -528,7 +528,7 @@ Congestion Control</h3>
 </p>
 <p>DCCP has congestion control.  For this reason the syslog over DTLS over
     DCCP option is recommended in preference to the syslog over the DTLS
-    over UDP option.
+    over UDP option. Implementations of syslog over DTLS over DCCP  MUST support CCID 3 and SHOULD support CCID 2 to ensure interoperability. 
 </p>
 <p>The congestion control considerations from section 4.3 of <a class='info' href='#RFC5426'>[RFC5426]<span> (</span><span class='info'>Okmianski, A., &ldquo;Transmission of Syslog Messages over UDP,&rdquo; March&nbsp;2009.</span><span>)</span></a> also apply to syslog over DTLS over udp.
  
@@ -547,8 +547,15 @@ Security Policies</h3>
 <a name="rfc.section.8"></a><h3>8.&nbsp;
 IANA Consideration</h3>
 
-<p>IANA is requested to assign a registered UDP and DCCP port number for syslog over DTLS.  The same value as for syslog over TLS (6514) is requested.
+<p>IANA is requested to assign a registered UDP and DCCP port number for syslog over DTLS.  The same value as for syslog over TLS (6514) is requested. 
 </p>
+<p>IANA is requested to assign the service code SYLG to syslog for use with DCCP.  The allocation in the service code registry should be as follows: 
+</p>
+<blockquote class="text">
+<p>1398361159    SYLG    Syslog Protocol    [RFCTBD] 
+</p>
+</blockquote>
+
 <a name="anchor16"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.9"></a><h3>9.&nbsp;
